parser/tests/bad/const02-3.st
% re-assignment on constant reference
%   constant parameter

procedure p(i: int, n: int)
  i := n
end p
